force-app/main/default/objects/Asset/fields/assigned_customer_account__c.field-meta.xml
<CustomField>
    <fullName>assigned_customer_account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>assigned customer-account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vehicle</relationshipLabel>
    <relationshipName>Vehicle</relationshipName>
    <type>Lookup</type>
</CustomField>