force-app/main/default/objects/Asset/fields/assigned_GPA_Department__c.field-meta.xml
<CustomField>
    <fullName>assigned_GPA_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>assigned GPA/Department</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Vehicle</relationshipLabel>
    <relationshipName>Vehicle</relationshipName>
    <type>Lookup</type>
</CustomField>