force-app/main/default/objects/Asset/fields/ate_out_date__c.field-meta.xml
<CustomField>
    <fullName>ate_out_date__c</fullName>
    <description>created By:- Abhishek Mamgain
Created at :- 09/12/2020
user story:- US- GD-1328
Purpose:- Need to create as per requirement</description>
    <label>ate out date</label>
    <type>Date</type>
</CustomField>