force-app/main/default/objects/Asset/fields/availability_of_service_packages__c.field-meta.xml
<CustomField>
    <fullName>availability_of_service_packages__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 02/11/2030
User Story: GD-1227
Purpose :- After Sales record of Customer.</description>
    <label>availability of service packages</label>
    <length>255</length>
    <type>Text</type>
</CustomField>