force-app/main/default/objects/Asset/fields/Butler__c.field-meta.xml
<CustomField>
    <fullName>Butler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Dedicated Butler.

Created By: Manoj Kumar
Created Date: 21/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <inlineHelpText>Dedicated Butler</inlineHelpText>
    <label>Butler</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>