force-app/main/default/objects/Asset/fields/Butler_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Butler_Mobile__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 21/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <formula>Butler__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Butler Mobile</label>
    <type>Text</type>
</CustomField>