force-app/main/default/objects/Asset/fields/CarLine__c.field-meta.xml
<CustomField>
    <fullName>CarLine__c</fullName>
    <label>Car Line</label>
    <length>2</length>
    <type>Text</type>
</CustomField>