force-app/main/default/objects/Asset/fields/Compound_in_date__c.field-meta.xml
<CustomField>
    <fullName>Compound_in_date__c</fullName>
    <description>created By:- Abhishek Mamgain
Created at :- 09/12/2020
user story:- US- GD-1328
Purpose:- Need to create as per requirement</description>
    <label>Compound in date</label>
    <length>8</length>
    <type>Text</type>
</CustomField>