force-app/main/default/objects/Asset/fields/Courtesy_Car__c.field-meta.xml
<CustomField>
    <fullName>Courtesy_Car__c</fullName>
    <label>Car type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Courtesy Car</fullName>
            </value>
            <value>
                <fullName>Demo Car</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>