force-app/main/default/objects/Asset/fields/create_new_repair__c.field-meta.xml
<CustomField>
    <fullName>create_new_repair__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: Manoj Kumar
Created Date: 02/11/2030
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <label>create new repair</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Vehicle (create new repair)</relationshipLabel>
    <relationshipName>Vehicle</relationshipName>
    <type>Lookup</type>
</CustomField>