force-app/main/default/objects/Asset/fields/CXP_sales_person__c.field-meta.xml
<CustomField>
    <fullName>CXP_sales_person__c</fullName>
    <description>created By:- Abhishek Mamgain
Created at :- 09/12/2020
user story:- US- GD-1328
Purpose:- Need to create as per requirement</description>
    <label>CXP sales person</label>
    <length>10</length>
    <type>Text</type>
</CustomField>