force-app/main/default/objects/Asset/fields/Date_of_Registration__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Registration__c</fullName>
    <description>Date of Registration (after registration).

Created By: Manoj Kumar
Created Date: 29/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <label>Date of Registration</label>
    <type>Date</type>
</CustomField>