force-app/main/default/objects/Asset/fields/Dealer_code_only_for_allocation_stock__c.field-meta.xml
<CustomField>
    <fullName>Dealer_code_only_for_allocation_stock__c</fullName>
    <description>created By:- Abhishek Mamgain
Created at :- 09/12/2020
user story:- US- GD-1328
Purpose:- Need to create as per requirement</description>
    <label>Dealer code(only for allocation stock)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>