force-app/main/default/objects/Asset/fields/DeliveryNumber__c.field-meta.xml
<CustomField>
    <fullName>DeliveryNumber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Number</label>
    <referenceTo>Delivery__c</referenceTo>
    <relationshipLabel>Vehicle</relationshipLabel>
    <relationshipName>Vehicle</relationshipName>
    <type>Lookup</type>
</CustomField>