force-app/main/default/objects/Asset/fields/DepartmentVehicleCode__c.field-meta.xml
<CustomField>
    <fullName>DepartmentVehicleCode__c</fullName>
    <displayFormat>{000000000}</displayFormat>
    <label>Department Vehicle Code</label>
    <type>AutoNumber</type>
</CustomField>