force-app/main/default/objects/Asset/fields/Engine_No__c.field-meta.xml
<CustomField>
    <fullName>Engine_No__c</fullName>
    <description>Engine No.

Created By: Manoj Kumar
Created Date: 21/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <label>Engine No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>