force-app/main/default/objects/Asset/fields/Ext_color__c.field-meta.xml
<CustomField>
    <fullName>Ext_color__c</fullName>
    <description>created By:- Abhishek Mamgain
Created at :- 09/12/2020
user story:- US- GD-1328
Purpose:- Need to create as per requirement</description>
    <label>Ext color</label>
    <length>3</length>
    <type>Text</type>
</CustomField>