force-app/main/default/objects/Asset/fields/FSC__c.field-meta.xml
<CustomField>
    <fullName>FSC__c</fullName>
    <description>FSC Code.

Created By: Manoj Kumar
Created Date: 21/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <label>FSC</label>
    <length>17</length>
    <type>Text</type>
</CustomField>