force-app/main/default/objects/Asset/fields/Gate_out_date__c.field-meta.xml
<CustomField>
    <fullName>Gate_out_date__c</fullName>
    <description>[11/11 5:18 PM] Mittal, Riddhi (Cognizant)
    
created By:- Riddhi Mittal
Created at :- 11/11/2020
user story:- US- GD-1452
Purpose:- Need to create as per requirement</description>
    <label>Gate out date</label>
    <length>8</length>
    <type>Text</type>
</CustomField>