force-app/main/default/objects/Asset/fields/GCS_DTCs__c.field-meta.xml
<CustomField>
    <fullName>GCS_DTCs__c</fullName>
    <label>GCS-DTCs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>