force-app/main/default/objects/Asset/fields/in_transit_destination_location__c.field-meta.xml
<CustomField>
    <fullName>in_transit_destination_location__c</fullName>
    <description>[11/11 5:18 PM] Mittal, Riddhi (Cognizant)
    
created By:- Riddhi Mittal
Created at :- 11/11/2020
user story:- US- GD-1452
Purpose:- Need to create as per requirement</description>
    <label>in transit destination location</label>
    <length>4</length>
    <type>Text</type>
</CustomField>