force-app/main/default/objects/Asset/fields/Internal_Vin__c.field-meta.xml
<CustomField>
    <fullName>Internal_Vin__c</fullName>
    <description>created By:- Abhishek Mamgain
Created at :- 09/12/2020
user story:- US- GD-1328
Purpose:- Need to create as per requirement</description>
    <label>Internal Vin</label>
    <length>10</length>
    <type>Text</type>
</CustomField>