force-app/main/default/objects/Asset/fields/Is_Used_Car__c.field-meta.xml
<CustomField>
    <fullName>Is_Used_Car__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created By: Manoj Kumar
Created Date: 21/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <label>Is Used Car</label>
    <type>Checkbox</type>
</CustomField>