force-app/main/default/objects/Asset/fields/Key_No__c.field-meta.xml
<CustomField>
    <fullName>Key_No__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 21/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <label>Key No</label>
    <length>6</length>
    <type>Text</type>
</CustomField>