force-app/main/default/objects/Asset/fields/Latest_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Latest_Mileage__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 21/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <inlineHelpText>Latest Mileage</inlineHelpText>
    <label>Latest Mileage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>