force-app/main/default/objects/Asset/fields/Licence_plate_after_registration__c.field-meta.xml
<CustomField>
    <fullName>Licence_plate_after_registration__c</fullName>
    <label>Licence plate (after registration)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>