force-app/main/default/objects/Asset/fields/Logistic_Status__c.field-meta.xml
<CustomField>
    <fullName>Logistic_Status__c</fullName>
    <label>Logistic Status</label>
    <length>4</length>
    <type>Text</type>
</CustomField>