force-app/main/default/objects/Asset/fields/Mileage_Update_Date_GCS__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Update_Date_GCS__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 21/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <label>Mileage Update Date(GCS)</label>
    <type>Date</type>
</CustomField>