force-app/main/default/objects/Asset/fields/Model_year__c.field-meta.xml
<CustomField>
    <fullName>Model_year__c</fullName>
    <description>created By:- Abhishek Mamgain
Created at :- 09/12/2020
user story:- US- GD-1328
Purpose:- Need to create as per requirement</description>
    <label>Model year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>