force-app/main/default/objects/Asset/fields/New_Car_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>New_Car_Registration_Number__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 21/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <label>New Car Registration Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>