force-app/main/default/objects/Asset/fields/NSI__c.field-meta.xml
<CustomField>
    <fullName>NSI__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 21/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <label>NSI</label>
    <length>19</length>
    <type>Text</type>
</CustomField>