force-app/main/default/objects/Asset/fields/Option_Package_description__c.field-meta.xml
<CustomField>
    <fullName>Option_Package_description__c</fullName>
    <description>created By:- Abhishek Mamgain
Created at :- 09/12/2020
user story:- US- GD-1328
Purpose:- Need to create as per requirement</description>
    <label>Option/ Package description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>