force-app/main/default/objects/Asset/fields/Recall_Date__c.field-meta.xml
<CustomField>
    <fullName>Recall_Date__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 21/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <label>Recall Date</label>
    <type>Date</type>
</CustomField>