force-app/main/default/objects/Asset/fields/Recall_Image__c.field-meta.xml
<CustomField>
    <fullName>Recall_Image__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 21/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <formula>IF (
				Is_Recalled__c,
				IMAGE(&quot;/resource/repair_img/recall_2.jpg&quot;, &quot;Recall&quot;, 30, 56),
				&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recall Image</label>
    <type>Text</type>
</CustomField>