force-app/main/default/objects/Asset/fields/related_repairs_warranty_claims_QIRs__c.field-meta.xml
<CustomField>
    <fullName>related_repairs_warranty_claims_QIRs__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>related repairs/warranty-claims/QIRs (history).

Created By: Manoj Kumar
Created Date: 29/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <label>Repairs/warranty</label>
    <referenceTo>Repair__c</referenceTo>
    <relationshipLabel>Vehicle</relationshipLabel>
    <relationshipName>Vehicle</relationshipName>
    <type>Lookup</type>
</CustomField>