force-app/main/default/objects/Asset/fields/Reservation_CXP_customer_code__c.field-meta.xml
<CustomField>
    <fullName>Reservation_CXP_customer_code__c</fullName>
    <description>created By:- Abhishek Mamgain
Created at :- 09/12/2020
user story:- US- GD-1328
Purpose:- Need to create as per requirement</description>
    <label>Reservation CXP customer code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>