force-app/main/default/objects/Asset/fields/Retail_type__c.field-meta.xml
<CustomField>
    <fullName>Retail_type__c</fullName>
    <description>created By:- Abhishek Mamgain
Created at :- 09/12/2020
user story:- US- GD-1328
Purpose:- Need to create as per requirement</description>
    <label>Retail type</label>
    <length>1</length>
    <type>Text</type>
</CustomField>