force-app/main/default/objects/Asset/fields/ReturnCode__c.field-meta.xml
<CustomField>
    <fullName>ReturnCode__c</fullName>
    <label>Return Code</label>
    <length>1</length>
    <type>Text</type>
</CustomField>