force-app/main/default/objects/Asset/fields/ReturnMessage__c.field-meta.xml
<CustomField>
    <fullName>ReturnMessage__c</fullName>
    <label>Return Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>