force-app/main/default/objects/Asset/fields/Sales_Spec_group_code__c.field-meta.xml
<CustomField>
    <fullName>Sales_Spec_group_code__c</fullName>
    <description>created By:- Abhishek Mamgain
Created at :- 09/12/2020
user story:- US- GD-1328
Purpose:- Need to create as per requirement</description>
    <label>Sales Spec group code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>