force-app/main/default/objects/Asset/fields/SD_Status__c.field-meta.xml
<CustomField>
    <fullName>SD_Status__c</fullName>
    <description>created By:- Abhishek Mamgain
Created at :- 09/12/2020
user story:- US- GD-1328
Purpose:- Need to create as per requirement</description>
    <label>SD Status</label>
    <length>4</length>
    <type>Text</type>
</CustomField>