force-app/main/default/objects/Asset/fields/Vehicle_availability__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_availability__c</fullName>
    <description>created By:- Abhishek Mamgain
Created at :- 09/12/2020
user story:- US- GD-1328
Purpose:- Need to create as per requirement</description>
    <label>Availability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>Vehicle Available</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>Vehicle Allocated</label>
            </value>
            <value>
                <fullName>50</fullName>
                <label>Vehicle Credit Released-Full payment</label>
            </value>
            <value>
                <fullName>70</fullName>
                <label>Request Delivery</label>
            </value>
            <value>
                <fullName>90</fullName>
                <label>Vehicle Goods Issue</label>
            </value>
            <value>
                <fullName>95</fullName>
                <label>Vehicle Final Invoiced</label>
            </value>
            <value>
                <fullName>A0</fullName>
                <label>Vehicle Retailed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>