force-app/main/default/objects/Asset/fields/Vehicle_Model_LTM__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Model_LTM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: Manoj Kumar
Created Date: 21/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <label>Vehicle Model (LTM)</label>
    <referenceTo>VehicleModel__c</referenceTo>
    <relationshipLabel>Vehicles</relationshipLabel>
    <relationshipName>Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>