force-app/main/default/objects/Asset/fields/Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: Manoj Kumar
Created Date: 02/11/2030
User Story: GD-1227
Purpose :- After Sales record of Customer.</description>
    <label>Vehicle-Type</label>
    <referenceTo>VehicleModel__c</referenceTo>
    <relationshipLabel>Vehicle (Vehicle-Type)</relationshipLabel>
    <relationshipName>Vehicle</relationshipName>
    <type>Lookup</type>
</CustomField>