force-app/main/default/objects/Asset/fields/Vehicle_usage__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_usage__c</fullName>
    <description>created By:- Abhishek Mamgain
Created at :- 09/12/2020
user story:- US- GD-1328
Purpose:- Need to create as per requirement</description>
    <label>Vehicle usage</label>
    <length>2</length>
    <type>Text</type>
</CustomField>