force-app/main/default/objects/Asset/fields/VehicleType__c.field-meta.xml
<CustomField>
    <fullName>VehicleType__c</fullName>
    <label>Vehicle Type</label>
    <length>4</length>
    <type>Text</type>
</CustomField>