force-app/main/default/objects/Asset/fields/VIN__c.field-meta.xml
<CustomField>
    <fullName>VIN__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 21/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <label>VIN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>