force-app/main/default/objects/Asset/recordTypes/DepartmentVehicle.recordType-meta.xml
<RecordType>
    <fullName>DepartmentVehicle</fullName>
    <active>true</active>
    <description>Retailer owned cars or cars assigned to Flagship Store</description>
    <label>Department Vehicle</label>
</RecordType>