force-app/main/default/objects/Asset/recordTypes/DirectSalesVehcile.recordType-meta.xml
<RecordType>
    <fullName>DirectSalesVehcile</fullName>
    <active>true</active>
    <label>Direct Sales Vehcile</label>
</RecordType>